--- a/style.css
+++ b/style.css
@@ -127,6 +127,13 @@ body {
 #loginForm input.currect {
   border-bottom: 2px solid #00f260;
 }
+#loginForm input:-webkit-autofill,
+#loginForm input:-webkit-autofill:hover,
+#loginForm input:-webkit-autofill:focus {
+  -webkit-text-fill-color: white;
+  background-color: rgba(255, 255, 255, 0.26);
+  transition: background-color 5000s ease-in-out 0s;
+}
 @keyframes wrong {
   0% {
     transform: translateX(0);
