--- a/style.css
+++ b/style.css
@@ -109,14 +109,14 @@ body {
   background: none;
   box-shadow: none;
   border-radius: 0;
-  border-bottom: 2px solid white;
   color: white;
   padding: 0.1rem;
   font-size: 1rem;
   letter-spacing: 0.1em;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
 }
 #loginForm input:focus {
-  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+  border-bottom: 2px solid white;
 }
 #loginForm input::placeholder {
   color: #ddd;
@@ -134,19 +134,17 @@ body {
   background-color: rgba(255, 255, 255, 0.26);
   transition: background-color 5000s ease-in-out 0s;
 }
-@keyframes wrong {
-  0% {
-    transform: translateX(0);
-  }
-  25% {
-    transform: translateX(10px);
-  }
-  75% {
-    transform: translateX(-10px);
-  }
-  100% {
-    transform: translateX(0);
-  }
+#loginForm .passDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+}
+.passDiv ion-icon {
+  font-size: 1.3rem;
+  position: absolute;
+  right: 0;
 }
 #loginForm button[type="submit"]:hover {
   background: white;
