--- a/style.css
+++ b/style.css
@@ -182,16 +182,9 @@ body {
   z-index: 5;
   overflow-x: hidden;
   overflow-y: auto;
-  direction: rtl;
 }
-.sidebar > ul,
-.sidebar > .about {
-  direction: ltr;
-  position: relative;
-  left: -4px;
-}
-.sidebar::-webkit-scrollbar-thumb {
-  background: rgb(75 255 0 / 55%);
+.sidebar::-webkit-scrollbar {
+  width: 0;
 }
 .sidebar ion-icon {
   --ionicon-stroke-width: 36px;
