--- a/style.css
+++ b/style.css
@@ -761,6 +761,9 @@ form {
   font-size: 1.5rem;
   text-align: center;
 }
+form input[type="date"].start {
+  grid-area: d1;
+}
 form input[type="date"].end {
   grid-area: d2;
 }
