--- a/mobile.css
+++ b/mobile.css
@@ -16,7 +16,7 @@
   grid-template-columns: 0.75fr 0.7fr 0.4fr 0.4fr 0.55fr 0.55fr;
 }
 #production tr {
-  grid-template-columns: 0.2fr 0.6fr 0.5fr 0.25fr 0.3fr 0.4fr 0.4fr;
+  grid-template-columns: 0.2fr 0.45fr 0.48fr 0.3fr 0.4fr;
 }
 #workers_payments tr {
   grid-template-columns: 1fr 0.8fr;
