--- a/style.css
+++ b/style.css
@@ -582,6 +582,19 @@ table {
   grid-area: py;
   grid-row: auto;
 }
+#employee .thead thead td:nth-child(2)::after {
+  content: attr(data-date);
+  font-size: 0.8rem;
+  position: absolute;
+  opacity: 0.6;
+  right: 0px;
+  bottom: -3px;
+}
+#employee .thead thead td:nth-child(2) {
+  transform: translateY(-6px);
+  position: relative;
+  content: attr(data-date);
+}
 #payments {
   height: 100%;
   width: 50%;
