--- a/style.css
+++ b/style.css
@@ -442,6 +442,18 @@ a {
   right: 85%;
   transform: rotate(-45deg);
 }
+.month_filter {
+  position: absolute;
+  right: 1.5rem;
+  appearance: none;
+  padding: 0.25rem;
+  border-radius: 0.35rem;
+  border: 1px solid #00f260;
+  outline: none;
+}
+option {
+  padding: 1rem 0;
+}
 .table_wrapper {
   height: 100%;
   width: 200%;
@@ -511,8 +523,8 @@ table {
   grid-template-rows: repeat(auto, auto);
 }
 #production tr {
-  grid-template-columns: 0.2fr 0.4fr 0.7fr 0.25fr 0.4fr;
-  grid-template-areas: "rf dt dr qt tl";
+  grid-template-columns: 0.3fr 0.2fr 0.7fr 0.25fr 0.4fr;
+  grid-template-areas: "dt rf dr qt tl";
 }
 #production_detail tr {
   grid-template-columns: 0.5fr 0.3fr 0.25fr 0.3fr;
@@ -524,12 +536,12 @@ table {
 }
 #payments tr {
   padding: 0 0.5rem;
-  grid-template-columns: 0.2fr 0.4fr 0.2fr 0.3fr;
+  grid-template-columns: 0.2fr 0.25fr 0.2fr 0.3fr;
   grid-template-areas: "rf dt qt tl";
 }
-#payments .wage tr {
-  grid-template-columns: 0.5fr 0.5fr;
-  grid-template-areas: "dt tl";
+#payments .right tr {
+  grid-template-columns: 0.5fr 0.5fr 0.5fr;
+  grid-template-areas: "dt fr tl";
 }
 #tasks.lots .thead {
   background: radial-gradient(
@@ -544,7 +556,8 @@ table {
 }
 #production .thead td:nth-child(2),
 #production .thead td:nth-child(3),
-#payments .fabric .thead td:nth-child(2) {
+#payments .left .thead td:nth-child(2),
+#payments .right .thead td:nth-child(2) {
   text-align: left !important;
 }
 #production .thead td:nth-child(4) {
@@ -552,6 +565,7 @@ table {
 }
 .date {
   grid-area: dt;
+  text-align: left !important;
 }
 .dressName {
   grid-area: dr;
@@ -582,6 +596,11 @@ table {
   grid-area: py;
   grid-row: auto;
 }
+.for {
+  grid-area: fr;
+  grid-row: auto;
+  text-align: left !important;
+}
 #employee .thead thead td:nth-child(2)::after {
   content: attr(data-date);
   font-size: 0.8rem;
@@ -598,9 +617,9 @@ table {
 #payments {
   height: 100%;
   width: 50%;
-  grid-template-columns: 0.6fr 0.4fr;
+  grid-template-columns: 0.55fr 0.45fr;
 }
-#payments .fabric {
+#payments .left {
   border-right: 1px solid gray;
 }
 .production,
@@ -846,6 +865,8 @@ form {
   text-align: center !important;
 }
 .ref {
+  grid-area: rf;
+  grid-row: auto;
   font-family: stamp;
   font-size: 1.5rem;
   text-align: left !important;
