--- a/mobile.css
+++ b/mobile.css
@@ -15,11 +15,18 @@
   padding: 0 0.5rem;
   grid-template-columns: 0.75fr 0.7fr 0.4fr 0.4fr 0.55fr 0.55fr;
 }
-#production tr {
-  grid-template-columns: 0.2fr 0.45fr 0.48fr 0.3fr 0.4fr;
-}
 #workers_payments tr {
   grid-template-columns: 1fr 0.8fr;
+}
+#production tr {
+  grid-template-columns: 0.45fr 0.2fr 0.48fr 0.3fr 0.4fr;
+}
+#payments tr {
+  padding: 0 0.25rem;
+  grid-template-columns: 0.2fr 0.25fr 0.2fr 0.3fr;
+}
+#payments .right tr {
+  grid-template-columns: 0.5fr 0.5fr 0.5fr;
 }
 .btn_sidebar {
   left: 0.5rem;
