--- a/style.css
+++ b/style.css
@@ -672,8 +672,8 @@ table {
 #payments .left {
   border-right: 1px solid gray;
 }
-.production,
-.recieved {
+#payments .production,
+#payments .recieved {
   background: linear-gradient(
     153deg,
     rgba(0, 240, 27, 0.2) 0%,
@@ -926,6 +926,10 @@ input[name="delivery"] {
   grid-template-columns: 1fr;
   grid-auto-rows: 1fr;
   grid-template-areas: "dt dt" "py py" "bt bt";
+}
+#form_date_filter {
+  grid-template-columns: 0.5fr 0.5fr;
+  grid-template-areas: "d1 d2" "bt bt";
 }
 #form_bill .ref {
   text-align: center !important;
