--- a/mobile.css
+++ b/mobile.css
@@ -23,10 +23,7 @@
 }
 #payments tr {
   padding: 0 0.25rem;
-  grid-template-columns: 0.15fr 0.3fr 0.2fr 0.35fr;
-}
-#payments .right tr {
-  grid-template-columns: 0.5fr 0.5fr 0.5fr;
+  grid-template-columns: 1fr 1fr;
 }
 .btn_sidebar {
   left: 0.5rem;
