--- a/style.css
+++ b/style.css
@@ -685,15 +685,15 @@ table {
   font-size: 0.75rem;
   color: #777;
 }
-#payments .production,
-#payments .recieved {
+#payments tr.production,
+#payments tr.recieved {
   background: linear-gradient(
     153deg,
     rgba(0, 240, 27, 0.2) 0%,
     rgba(182, 1, 1, 0) 100%
   );
 }
-.due {
+#payments tr.due {
   background: linear-gradient(
     153deg,
     rgba(240, 1, 27, 0.2) 0%,
